# undicht_0.41

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/src/: buffer_layout.cpp  debug.cpp  debug.h  memory_watcher.cpp  memory_watcher.h  shared.h  shared_id.cpp  shared_id.h  types.cpp  types.h  undicht_thread.h  unique_object.h
engine/: CMakeLists.txt
engine/src/: engine.cpp  engine.h  frame.cpp  frame.h  frame_manager.cpp  frame_manager.h
examples/cell/: CMakeLists.txt
examples/cell/res/: default.txt
examples/cell/src/: app.cpp  app.h  main.cpp
examples/cell/src/entities/: entity.cpp  entity.h  entity_chunk.cpp  entity_chunk.h  entity_world.cpp  entity_world.h  light_buffer.cpp  light_buffer.h
examples/cell/src/entities/lights/: direct_light.cpp  direct_light.h  point_light.cpp  point_light.h
examples/cell/src/environment/: cloud_layer.cpp  cloud_layer.h  environment.cpp  environment.h  environment_generator.cpp  environment_generator.h
examples/cell/src/files/: chunk_file.cpp  chunk_file.h  material_file.cpp  material_file.h  world_file.cpp  world_file.h
examples/cell/src/materials/: material.cpp  material.h  material_atlas.cpp  material_atlas.h
examples/cell/src/math/: cell_math.cpp  cell_math.h  ray_cast.cpp  ray_cast.h
examples/cell/src/player/: player.cpp  player.h
examples/cell/src/renderer/: .gitignore  brdf_integration_map.cpp  brdf_integration_map.h  drawable_world.cpp  drawable_world.h  final_renderer.cpp  final_renderer.h  light_buffer.cpp  light_buffer.h  light_renderer.cpp  light_renderer.h  master_renderer.cpp  master_renderer.h  shadow_renderer.cpp  shadow_renderer.h  world_buffer.cpp  world_buffer.h  world_renderer.cpp  world_renderer.h
examples/cell/src/renderer/shader/: ambient_light.frag  ambient_light.vert  compile.sh  direct_light.frag  direct_light.vert  direct_shadow.frag  direct_shadow.vert  final.frag  final.vert  light.frag  light.vert  point_light.frag  point_light.vert  world.frag  world.vert
examples/cell/src/user_interface/debug/: debug_menu.cpp  debug_menu.h
examples/cell/src/world/: cell.cpp  cell.h  chunk.cpp  chunk.h  drawable_world.cpp  drawable_world.h  mini_chunk.cpp  mini_chunk.h  world.cpp  world.h  world_loader.cpp  world_loader.h
examples/cell/src/world/cells/: cell.cpp  cell.h  cell_buffer.cpp  cell_buffer.h  cell_chunk.cpp  cell_chunk.h  cell_world.cpp  cell_world.h  mini_chunk.cpp  mini_chunk.h
examples/cell/src/world/chunk_system/: chunk.cpp  chunk.h  chunk_buffer.cpp  chunk_buffer.h  chunk_system.cpp  chunk_system.h
examples/cell/src/world/edit/: chunk_edit.cpp  chunk_edit.h  chunk_optimizer.cpp  chunk_optimizer.h  world_edit.cpp  world_edit.h
examples/cell/src/world/lights/: light.cpp  light.h  light_buffer.cpp  light_buffer.h  light_chunk.cpp  light_chunk.h  light_world.cpp  light_world.h
examples/cell/worlds/: 0_-255_0_first_world.txt  first_chunk.txt  first_world.chunk  first_world.txt  first_world.world
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: app.cpp  app.h  frame.cpp  frame.h  main.cpp
examples/tonk_game/: CMakeLists.txt
examples/tonk_game/res/: default (copy).tonk  default.tonk  save0.tonk
examples/tonk_game/src/: main.cpp  renderer.cpp  renderer.h  tonk_game.cpp  tonk_game.h
examples/tonk_game/src/map/: map.cpp  map.h  map_generator.cpp  map_generator.h  tile.cpp  tile.h  tile_map.cpp  tile_map.h  tile_set.cpp  tile_set.h  tile_set_file.cpp  tile_set_file.h
examples/tonk_game/src/shader/: map.frag  map.vert
examples/tonk_game/src/ui/: dev_ui.cpp  dev_ui.h
graphics/: CMakeLists.txt
graphics/src/core/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  fence.cpp  formats.cpp  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  logical_device.cpp  logical_device.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swap_chain.cpp  swap_chain.h
graphics/src/imgui/vulkan/: imgui_api.cpp  imgui_api.h
graphics/src/renderer/vulkan/: descriptor_set_cache.cpp  descriptor_set_cache.h  immediate_command.cpp  immediate_command.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  texture.cpp  texture.h  transfer_buffer.cpp  transfer_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
graphics/src/shader/: compile.py  compile.sh  triangle.frag  triangle.vert
graphics/src/window/glfw/: monitor.cpp  monitor.h  window.cpp  window.h  window_api.cpp  window_api.h
tools/: CMakeLists.txt
tools/src/: file_tools.cpp  file_tools.h
tools/src/3D/camera/: camera_3d.cpp
tools/src/IBL/: ibl.cpp  ibl.h
tools/src/binary_data/: binary_data_buffer.cpp  binary_data_buffer.h  binary_data_file.cpp  binary_data_file.h
tools/src/images/: cube_map_data.cpp  cube_map_data.h  image_data.cpp  image_data.h  image_data_3d.cpp  image_data_3d.h  image_file.cpp  image_file.h
tools/src/math/: math_tools.cpp  math_tools.h  orientation_3d.cpp  orthographic_projection.cpp  orthographic_projection.h  perspective_projection.h
tools/src/model_loading/: model_loader.cpp  model_loader.h
tools/src/model_loading/collada/: collada_file.cpp  collada_file.h
tools/src/xml/: xml_element.cpp  xml_element.h  xml_file.cpp  xml_file.h
